# affair_izdihar_gestion

./: .gitignore  HANDOFF.md  README.md  pyproject.toml
.claude/: settings.local.json
designDocs/00_Inception/: 00_sprint_01.md  01_MIGRATION_PATTERNS_FROM_ACCOUNTING.md  02_PROJECT_SETUP_COMPLETE.md  03_NEXT_STEPS_GUIDE.md  04_INVENTORY_SCAN_RESULTS_SUMMARY.md
designDocs/00_Inception/inventory_reports/: dbf_inventory_report_20251207_215709.txt
designDocs/01_Sage_Docs/Markdowns/: ADDITIF_SCD_V15.md  APPLICATION DES EXIGENCES DGI.md  CORRESPONDANCECIEL_SAGE.md  GUIDECIEL_SAGE.md
mcp_adapters/: README.md
scripts/: 01_inventory_dbf_files.py  pdf_to_md_converter.py  pdf_to_md_converter_old_BROKEN.py  pdf_to_md_guide.md
systems/caisse_system/: README.md
systems/feed_system/: README.md
systems/milk_system/: README.md
